--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,37 +11,37 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "antd": "^5.12.8",
     "@ant-design/icons": "^5.2.6",
+    "@hookform/resolvers": "^3.3.2",
+    "antd": "^5.12.8",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
-    "zustand": "^4.4.7",
-    "react-query": "^3.39.3",
+    "file-saver": "^2.0.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
-    "@hookform/resolvers": "^3.3.2",
-    "zod": "^3.22.4",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.20.1",
     "recharts": "^2.8.0",
     "xlsx": "^0.18.5",
-    "file-saver": "^2.0.5"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@types/file-saver": "^2.0.7",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.1.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0",
+    "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0"
   },
   "browserslist": {
     "production": [
@@ -73,4 +73,4 @@
   ],
   "author": "ESG Team",
   "license": "MIT"
-} 
+}
